@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2019 the original author or authors.
+ * Copyright 2016-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -404,18 +404,6 @@ public abstract class MessagingMessageListenerAdapter<K, V> implements ConsumerS
 	 *
 	 * @param result the result.
 	 * @param topic the topic.
-	 * @deprecated in favor of {@link #sendResponse(Object, String, Object, boolean)}.
-	 */
-	@Deprecated
-	protected void sendResponse(Object result, String topic) {
-		sendResponse(result, topic, null, false);
-	}
-
-	/**
-	 * Send the result to the topic.
-	 *
-	 * @param result the result.
-	 * @param topic the topic.
 	 * @param source the source (input).
 	 * @param returnTypeMessage true if we are returning message(s).
 	 * @since 2.1.3
@@ -426,7 +414,8 @@ public abstract class MessagingMessageListenerAdapter<K, V> implements ConsumerS
 			this.logger.debug(() -> "No replyTopic to handle the reply: " + result);
 		}
 		else if (result instanceof Message) {
-			this.replyTemplate.send((Message<?>) result);
+			Message<?> reply = checkHeaders(result, topic, source);
+			this.replyTemplate.send(reply);
 		}
 		else {
 			if (result instanceof Iterable) {
@@ -453,6 +442,31 @@ public abstract class MessagingMessageListenerAdapter<K, V> implements ConsumerS
 				sendSingleResult(result, topic, source);
 			}
 		}
+	}
+
+	private Message<?> checkHeaders(Object result, String topic, Object source) {
+		Message<?> reply = (Message<?>) result;
+		MessageHeaders headers = reply.getHeaders();
+		boolean needsTopic = headers.get(KafkaHeaders.TOPIC) == null;
+		boolean sourceIsMessage = source instanceof Message;
+		boolean needsCorrelation = headers.get(KafkaHeaders.CORRELATION_ID) == null && sourceIsMessage;
+		boolean needsPartition = headers.get(KafkaHeaders.PARTITION_ID) == null && sourceIsMessage
+				&& getReplyPartition((Message<?>) source) != null;
+		if (needsTopic || needsCorrelation || needsPartition) {
+			MessageBuilder<?> builder = MessageBuilder.fromMessage(reply);
+			if (needsTopic) {
+				builder.setHeader(KafkaHeaders.TOPIC, topic);
+			}
+			if (needsCorrelation && sourceIsMessage) {
+				builder.setHeader(KafkaHeaders.CORRELATION_ID,
+						((Message<?>) source).getHeaders().get(KafkaHeaders.CORRELATION_ID));
+			}
+			if (sourceIsMessage && reply.getHeaders().get(KafkaHeaders.REPLY_PARTITION) == null) {
+				setPartition(builder, (Message<?>) source);
+			}
+			reply = builder.build();
+		}
+		return reply;
 	}
 
 	@SuppressWarnings("unchecked")
@@ -500,11 +514,16 @@ public abstract class MessagingMessageListenerAdapter<K, V> implements ConsumerS
 		this.replyTemplate.send(builder.build());
 	}
 
-	private void setPartition(MessageBuilder<Object> builder, Message<?> source) {
-		byte[] partitionBytes = source.getHeaders().get(KafkaHeaders.REPLY_PARTITION, byte[].class);
+	private void setPartition(MessageBuilder<?> builder, Message<?> source) {
+		byte[] partitionBytes = getReplyPartition(source);
 		if (partitionBytes != null) {
 			builder.setHeader(KafkaHeaders.PARTITION_ID, ByteBuffer.wrap(partitionBytes).getInt());
 		}
+	}
+
+	@Nullable
+	private byte[] getReplyPartition(Message<?> source) {
+		return source.getHeaders().get(KafkaHeaders.REPLY_PARTITION, byte[].class);
 	}
 
 	protected final String createMessagingErrorMessage(String description, Object payload) {
